
News
----

Version 0.4.3
^^^^^^^^^^^^^

     * Plots no longer block program execution

     * Added support for time delays in nonlinear device models (also
       included in updated documentation)

     * Added a memristor model, gyrator device and option for
       user-defined nonlinear VCCSs

     * Added Curtice cubic MESFET model

     * Default integration method in transient analysis is now ``trap``


Version 0.4.2
^^^^^^^^^^^^^

    * Added automatic test suite

    * Added ``-x`` command line option

    * New, faster sparse-matrix-based nodal implementation using Scipy
      library (pysparse no longer needed)

    * Faster (sparse-matrix-based) transient analysis: saves one
      iteration per time step compared with previous implementation

    * Other minor improvements


Version 0.4.1
^^^^^^^^^^^^^

    * Much better homotopy routines

    * Internal terminal variables can now be plotted from the netlist

    * Improved documentation (Options and Constant tables, Device categories)


Version 0.4.0
^^^^^^^^^^^^^

    * Added sparse matrix support for OP, DC and Tran analyses.
    
    * Added NEWS file and examples directory
    
    * Other general improvements
