@@ -1,10 +1,10 @@
 # *** MOS EKV equation test netlist ***
 #
 #
-.analysis testdev plot=1 ports_bias = [3V, 0V, 1V] sweep_port=1 \
-	  start = -1V stop= 3.V sweep_num=100 device = bsim3:m1 
+.analysis testdev plot=1 ports_bias = [1.5V, 3V, 3V] sweep_port=2 \
+	  start = 0V stop= 3.V sweep_num=100 device = bsim3:m1 \
+	  param = temp param_val = [-10, 27, 50] useAD=1
 #	  useAD=0 shell=1 plot=0
-#	  param = temp param_val = [-10, 27, 50] useAD=1
 
 #.analysis testdev plot=1 ports_bias = [-.1V, -1V, -3V] sweep_port=1 \
 #	  start = 0V stop= -3V sweep_num=100 device = mosekv:m1 \
