@@ -2,7 +2,7 @@
 
 .options maxdelta = 1. maxiter=30
 *.analysis dc device=vdc:vin param=vdc start=0 stop=3V verbose=0 num=100
-.analysis tran tstop=20n tstep=.1n im=BE verbose=0 saveall=1 shell=0
+.analysis tran tstop=20n tstep=.1n im=trap verbose=0 saveall=1 shell=0
 
 vdc:vdd 1 gnd vdc=3V 
 *vdc:vin in gnd vdc=1 
@@ -15,7 +15,8 @@ x3 o2 out 1 gnd inverter
 cap:cload out gnd c=20fF
 
 .subckt inverter in out 1 gnd
-bsim3:m1 out in 1 1 type = p
+# m1 connected in reverse mode (to test model)
+bsim3:m1 1 in out 1 type = p
 bsim3:m2 out in gnd gnd type = n
 #cap:cload out gnd c=.01pF
 .ends
